# hotfix

./: .env.example  .gitignore  Makefile  README.md
backend/: Cargo.toml
backend/migrations/: 0001_initial.sql  0002_users_email_unique.sql  0003_hotfix_projects.sql  0004_hotfix_project_slugs.sql  0005_imported_sentry_project_inclusion.sql  0006_hotfix_project_graph.sql  0007_imported_sentry_project_metrics.sql  0008_imported_sentry_project_series.sql  0009_hotfix_incidents.sql  0010_hotfix_incident_backfill_cursor.sql  0011_manual_canvas_items.sql  0012_repo_indexing.sql  0013_index_job_leases.sql
backend/scripts/: apply-migrations.sh
backend/src/: indexing.rs  main.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ProjectHomeGraph.tsx
