[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
async-trait = "0.1.89"
axum = "0.8.8"
base64 = "0.22.1"
dotenvy = "0.15.7"
rand = "0.9.2"
reqwest = { version = "0.13.2", default-features = false, features = ["form", "http2", "json", "rustls"] }
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "time", "uuid"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["parsing", "serde"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tower-sessions = { version = "0.15.0", features = ["private"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
